--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -398,6 +398,9 @@ on property:persist.vendor.ssr.enable_ramdumps=0
 #on property:persist.vendor.sys.rawdump_copy=0
 #    write /sys/kernel/dload/emmc_dload 0
 
+on property:hw.fm.init=1
+    write /sys/module/radio_iris_transport/parameters/fmsmd_set ${hw.fm.init}
+    
 on property:sys.boot_completed=1
     write /dev/kmsg "Boot completed "
     #Reset read ahead for dm-0, dm-1 and dm-2 to 128kb
